syntax = "proto3";

package telemetry.service.collector;

option java_package = "ru.yandex.practicum.grpc.telemetry.collector";

import "google/protobuf/empty.proto";
import "telemetry/messages/hub_event.proto";
import "telemetry/messages/sensor_event.proto";

service CollectorController {
  rpc CollectSensorEvent (message.event.SensorEventProto)
      returns (google.protobuf.Empty);

  rpc CollectHubEvent (message.event.HubEventProto)
      returns (google.protobuf.Empty);
}